tests/neg-macros/i9972/Macro_1.scala
package notmacro

import scala.util.NotGiven

object Main extends App {
  summon[NotGiven[T[Int]]] // error
}
